[gd_scene load_steps=6 format=3 uid="uid://dn0ft4j8c7qy"]

[ext_resource type="Script" uid="uid://bqie04vvivge5" path="res://extra/scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="FontFile" uid="uid://coxs1vyvcw8g" path="res://assets/fonts/Lamano.ttf" id="2_6ivef"]
[ext_resource type="Theme" uid="uid://dcw0uwn05xlqe" path="res://extra/assets/themes/menus.tres" id="3_kukqi"]
[ext_resource type="Theme" uid="uid://dw1jdc6r8yojs" path="res://scenes/CARD_THEME.tres" id="3_x4fyv"]
[ext_resource type="PackedScene" uid="uid://ny1xt77lloo1" path="res://extra/scenes/menus/volume_slider.tscn" id="4_5d2l8"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7411765)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6ivef")
theme_override_font_sizes/font_size = 72
text = "PAUSE"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x4fyv")
text = "RESUME"

[node name="PauseOptions" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("3_x4fyv")
text = "OPTIONS"

[node name="PauseExit" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("3_x4fyv")
text = "MAIN MENU"

[node name="OptionsMenu" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu"]
layout_mode = 2
theme = ExtResource("3_kukqi")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer"]
layout_mode = 2

[node name="OptionsHeader" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x4fyv")
text = "AUDIO SETTINGS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Master" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x4fyv")
text = "Master"

[node name="VolumeSlider" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_5d2l8")]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Music" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme = ExtResource("3_x4fyv")
text = "BGM   "

[node name="VolumeSlider" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_5d2l8")]
layout_mode = 2
bus_name = "BGM"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SFX" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_x4fyv")
text = "SFX   "

[node name="VolumeSlider" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_5d2l8")]
layout_mode = 2
bus_name = "SFX"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_x4fyv")
text = "Back"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/PauseOptions" to="." method="_on_pause_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/PauseOptions" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/PauseExit" to="." method="_on_pause_exit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/OptionsMenu/PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
